--- a/packages/css/src/togglegroup.css
+++ b/packages/css/src/togglegroup.css
@@ -1,61 +1,4 @@
 /* TODO: This file can be removed in the next major version. */
 .ds-togglegroup {
-  --dsc-togglegroup-background: var(--ds-color-surface-default);
-  --dsc-togglegroup-border-width: var(--ds-border-width-default);
-  --dsc-togglegroup-border-style: solid;
-  --dsc-togglegroup-border-color: var(--ds-color-neutral-border-default);
-  --dsc-togglegroup-spacing: 0;
-  --dsc-togglegroup-border-radius: var(--ds-border-radius-md);
-  --dsc-togglegroup-button-size: var(--ds-size-12);
-
-  background: var(--dsc-togglegroup-background);
-  border-radius: var(--dsc-togglegroup-border-radius);
-  border-width: var(--dsc-togglegroup-border-width);
-  border-style: var(--dsc-togglegroup-border-style);
-  border-color: var(--dsc-togglegroup-border-color);
-  gap: var(--dsc-togglegroup-spacing);
-  grid-auto-columns: 1fr;
-  grid-auto-flow: column;
-  height: fit-content;
-  padding: var(--dsc-togglegroup-spacing);
-  max-width: fit-content;
-  overflow-x: auto;
-  width: auto;
-
-  &:not([hidden]) {
-    display: grid;
-  }
-
-  & label input {
-    position: absolute;
-    opacity: 0;
-  }
-
-  label {
-    border-radius: calc(var(--dsc-togglegroup-border-radius) - calc(var(--dsc-togglegroup-spacing) / 2));
-    min-height: var(--dsc-togglegroup-button-size);
-    min-width: fit-content;
-
-    @composes ds-focus--inset from './base.css';
-
-    &:has(input:focus-visible) {
-      border-radius: var(--dsc-togglegroup-border-radius);
-    }
-
-    &[data-icon] {
-      height: var(--dsc-togglegroup-button-size);
-      width: var(--dsc-togglegroup-button-size);
-    }
-
-    @media (forced-colors: active) {
-      &:has(input:checked) {
-        background: ButtonText;
-        color: CanvasText;
-
-        & svg {
-          color: CanvasText;
-        }
-      }
-    }
-  }
+  @composes ds-toggle-group from './toggle-group.css';
 }
